--- a/hospital/templates/hospital/base.html
+++ b/hospital/templates/hospital/base.html
@@ -9,16 +9,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
-
+<!-- background-color: #f5f5f5; -->
 <body style="background-color: #f5f5f5; height:100vh">
     <header>
-        <nav style="background-color: #d6e6f2;">
+        <nav style="background-color: #d6e6f2;" class="shadow-sm">
             <div class="uk-container ">
                 <div class="uk-navbar-left">
                     <ul class="uk-navbar-nav">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
-                        <li><a href="#">{{request.user}}</a></li>
+                        {% if user.is_authenticated %}
+                            <li><a href="#"><strong>{{request.user}}</strong></a></li>
+                        {% endif %}
                     </ul>
                     {% if user.is_authenticated %}
                         <div class=" d-flex float-end">
