--- a/hospital/templates/hospital/blog_create.html
+++ b/hospital/templates/hospital/blog_create.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="card-body">
 
-                        <form class="uk-grid-small" method="post" autocomplete="off" enctype="multipart/form-data" uk-grid>
+                        <form class="uk-grid-small" method="post" autocomplete="off" id="blog_form" enctype="multipart/form-data" uk-grid>
                             {% csrf_token %}
                             <div class="uk-width-1-2@s">
                                 <input class="uk-input rounded-1 shadow-sm" id="title" name="title" type="text" placeholder="Blog title">
@@ -59,20 +59,26 @@
                                         <button class="btn bg-primary text-light bg-opacity-75 shadow ps-3 pe-3 pt-1 pb-1 uk-button-default border-1 " type="button" tabindex="-1"><i class="bi bi-file-arrow-down  "></i> Select profile</button>
                                     </div>
                                 </div>
+
                                 
-                        
                                 <div class="">
+                                    <div class="uk-margin form-check mb-2 d-block">
+                                        <input class="form-check-input" name="is_draft" type="checkbox" value="True" id="flexCheckIndeterminate">
+                                        <label class="form-check-label " for="flexCheckIndeterminate">
+                                          Save as draft
+                                        </label>
+                                    </div>
                                     <button type="submit" class="btn bg-success text-light shadow ps-4 pe-4 pt-1 pb-1 bg-opacity-50">Publish  <i class="bi bi-file-post-fill"> </i></button>
                                 </div>
                                 
-                                <div class="">
+                                <!-- <div class="">
                                     <p class="m-0 text-center mt-1 opacity-50">or <i class="bi bi-option"></i></p>
                                 </div>
                                 
+                                <div class="">
+                                    <a onclick="save_draft()" class="btn text-decoration-none bg-danger text-light shadow ps-4 pe-4 pt-1 pb-1 bg-opacity-50">Save draft  <i class="bi bi-pencil-square"> </i></a>
+                                </div> -->
                             </form>
-                            <div class="">
-                                <a onclick="save_draft()" class="btn text-decoration-none bg-danger text-light shadow ps-4 pe-4 pt-1 pb-1 bg-opacity-50">Save draft  <i class="bi bi-pencil-square"> </i></a>
-                            </div>
                     </div>
                 </div>
             </div>
@@ -81,10 +87,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script> 
     <script src="https://malsup.github.io/jquery.form.js"></script> 
  
+    <!-- // this has some error  -->
 <script>
-    
 
     function save_draft(){
+        console.log('cliked');
+        console.log(document.getElementById("file-id").files[0])
+
+    
         $.ajax({
             url: "{% url 'save_draft' %}",
             type: "POST",
@@ -93,7 +103,7 @@
                 'category': $('#category').val(),
                 'summary': $('#summary').val(),
                 'content': $('#content').val(),
-                'blog_image': $('#blog_image').val(),
+                'blog_image': document.getElementById("file-id").files[0].name,
                 'X-CSRFToken': $('input[name=csrfmiddlewaretoken]').val()
             },
             enctype: 'multipart/form-data',
@@ -104,6 +114,7 @@
                 }
                 else{
                     UIkit.notification({message: '<span uk-icon=\'icon:  close\'></span> All fieldsis required !'})
+                    $('#blog_form').trigger('reset');
 
                 }
             }
