--- a/hospital/templates/hospital/all_blog.html
+++ b/hospital/templates/hospital/all_blog.html
@@ -13,12 +13,10 @@
                 background: linear-gradient(231deg, rgba(208,39,39,0.6811099439775911) 7%, rgba(0,52,113,1) 100%);
         }   
         .blog_card_bg{
-            background: linear-gradient(90deg, #00d0ffb1 0%, #3a47d5a0 100%);
+            background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
         }
         
-        .draf-card{
-            background: linear-gradient(90deg, #7688b3 0%, #182848 100%);
-        }
+        
         .badge{
             background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
         }
