--- a/hospital/templates/hospital/base.html
+++ b/hospital/templates/hospital/base.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 <!-- background-color: #f5f5f5; -->
-<body style="background-color: #f5f5f5; height:100vh">
+<body style="background-color: #f5f5f5; height:min(100vh)">
     <header>
-        <nav style="background-color: #d6e6f2;" class="shadow-sm">
+        <nav style="background-color: #d6e6f2;" class="shadow-sm ">
             <div class="uk-container ">
                 <div class="uk-navbar-left">
                     <ul class="uk-navbar-nav">
@@ -45,6 +45,14 @@
 
     {% endblock %}
         
+
+<footer>
+    <div class="bg-primary bg-opacity-75 p-3 mt-3">
+        <div class="container">
+            <h3 class="m-1 text-center text-light"><strong>Thanks for visiting ...</strong></h3>
+        </div>
+    </div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
  <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.3/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.3/dist/js/uikit-icons.min.js"></script>
